--- a/package.json
+++ b/package.json
@@ -16,11 +16,15 @@
     "expo": "~49.0.11",
     "expo-checkbox": "^2.5.0",
     "expo-image-picker": "~14.3.2",
+    "expo-sqlite": "~11.3.3",
     "expo-status-bar": "~1.6.0",
+    "lodash": "^4.17.21",
     "react": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-paper": "^5.11.1",
     "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0"
+    "react-native-screens": "~3.22.0",
+    "expo-font": "~11.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
